# CallAnalyzer

./: LICENSE  README.md  pyproject.toml  requirements.txt
call_analyzer/config/: settings.py
call_analyzer/infrastructure/: db_connector.py  excel_reporter.py  gql_connector.py  query_builder.py
call_analyzer/models/: call.py  call_event.py
call_analyzer/scripts/: run_analysis.py
call_analyzer/services/: app.py  billing_classifier.py  call_analyzer.py  statistics.py
call_analyzer/tests/: test_call_analyzer.py
