[project]
name = "call-analyzer"
version = "0.1.0"
description = "Call Data Record (CDR) analytics tool for FreePBX/Asterisk systems"
authors = [
  { name = "Romain BERTHET", email = "berthet.romain3@gmail.com" }
]
dependencies = [
  "pandas>=2.0",
  "sqlalchemy>=2.0",
  "pymysql>=1.0",
  "requests>=2.0",
  "gql>=3.0",
  "aiohttp>=3.0",
  "openpyxl>=3.0",
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["call_analyzer"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
